Bug 514493 - Cannot disable "use as pointer and keyboard"
Summary: Cannot disable "use as pointer and keyboard"
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_joystick (other bugs)
Version First Reported In: 6.5.80
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 514569 514800 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-01-12 15:57 UTC by neil
Modified: 2026-01-19 11:01 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description neil 2026-01-12 15:57:13 UTC
SUMMARY
In neon unstable, it's not currently possible to disable this feature. It makes some of my games (notably Celeste) unplayable from within the Plasma Wayland session.

STEPS TO REPRODUCE
1. Attempt to disable the gamepad option "use as pointer and keyboard"
2. It won't turn actually turn off, regardless of the position of the toggle switch
3. Regardless of where you left the toggle switch, if you close settings and restart it, it will still be turned on

NOTES
I haven't tested this on X11
Comment 1 Bug Janitor Service 2026-01-13 13:12:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/3450
Comment 2 Bug Janitor Service 2026-01-13 14:43:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8640
Comment 3 Marco Martin 2026-01-13 15:19:12 UTC
Git commit 2c3dcfc45a6a4503bfb7c9b92a18bb2c0b2122dd by Marco Martin, on behalf of Vlad Zahorodnii.
Committed on 13/01/2026 at 14:54.
Pushed by vladz into branch 'master'.

kcms/gamecontroller: Fix plasma integration switch

KCM.ConfigModule is the wrong object.

M  +4    -5    kcms/gamecontroller/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/2c3dcfc45a6a4503bfb7c9b92a18bb2c0b2122dd
Comment 4 Zamundaaa 2026-01-13 20:39:01 UTC
Git commit b21937eab565240d5f51c45109dee20d77dc8ecf by Xaver Hugl.
Committed on 13/01/2026 at 20:06.
Pushed by zamundaaa into branch 'master'.

plugins/gamecontroller: don't change usage count to negative values

In some cases, another app might've opened the controller node before KWin, so
if that app closes the node again, usage count would go below zero, which causes
problems like input emulation being active only when another app is using the
controller, which is the exact opposite of what we want.

M  +15   -10   src/plugins/gamecontroller/gamecontroller.cpp
M  +2    -1    src/plugins/gamecontroller/gamecontroller.h
M  +2    -2    src/plugins/gamecontroller/gamecontrollermanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/b21937eab565240d5f51c45109dee20d77dc8ecf
Comment 5 Vlad Zahorodnii 2026-01-14 08:30:55 UTC
Git commit 513f04813619e8118d3613b9dfd7c1041fcc45e6 by Vlad Zahorodnii, on behalf of Xaver Hugl.
Committed on 14/01/2026 at 08:07.
Pushed by vladz into branch 'Plasma/6.6'.

plugins/gamecontroller: don't change usage count to negative values

In some cases, another app might've opened the controller node before KWin, so
if that app closes the node again, usage count would go below zero, which causes
problems like input emulation being active only when another app is using the
controller, which is the exact opposite of what we want.
(cherry picked from commit b21937eab565240d5f51c45109dee20d77dc8ecf)

M  +15   -10   src/plugins/gamecontroller/gamecontroller.cpp
M  +2    -1    src/plugins/gamecontroller/gamecontroller.h
M  +2    -2    src/plugins/gamecontroller/gamecontrollermanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/513f04813619e8118d3613b9dfd7c1041fcc45e6
Comment 6 Zamundaaa 2026-01-14 16:19:58 UTC
*** Bug 514569 has been marked as a duplicate of this bug. ***
Comment 7 Zamundaaa 2026-01-14 16:42:06 UTC
Git commit 4a456408e9bb5ff0afaa0ea6fbe00c8daa5dd9ce by Xaver Hugl, on behalf of Vlad Zahorodnii.
Committed on 14/01/2026 at 16:17.
Pushed by zamundaaa into branch 'Plasma/6.6'.

kcms/gamecontroller: Fix plasma integration switch

KCM.ConfigModule is the wrong object.
(cherry picked from commit 2c3dcfc45a6a4503bfb7c9b92a18bb2c0b2122dd)

M  +4    -5    kcms/gamecontroller/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/4a456408e9bb5ff0afaa0ea6fbe00c8daa5dd9ce
Comment 8 Zamundaaa 2026-01-19 11:01:29 UTC
*** Bug 514800 has been marked as a duplicate of this bug. ***