plugins/gamecontroller: don't change usage count to negative values

In some cases, another app might've opened the controller node before KWin, so
if that app closes the node again, usage count would go below zero, which causes
problems like input emulation being active only when another app is using the
controller, which is the exact opposite of what we want.

BUG: 514493
(cherry picked from commit b21937eab565240d5f51c45109dee20d77dc8ecf)